--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@types/react-dom": "^19",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "eslint": "^8.57.0"
   }
 }
