[dyad] Mise à jour d'ESLint vers la version 9 et ajustement de la configuration pour résoudre l'avertissement de dépréciation. - wrote 2 file(s) + extra files edited outside of Dyad

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,13 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next/core-web-vitals",
+  "root": true,
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module",
+    "project": ["./tsconfig.json"]
+  },
+  "rules": {
+    // Ajoutez ou modifiez des règles ici si nécessaire pour ESLint v9
+    // Par exemple, si vous rencontrez des erreurs spécifiques après la mise à jour.
+  }
 }
