--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
+    "geist": "^1.5.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.511.0",
     "next": "14.2.5",
@@ -65,10 +66,10 @@
     "@types/node": "20.14.10",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "eslint": "^9.8.0",
-    "eslint-config-next": "14.2.5"
+    "typescript": "^5"
   }
 }
