--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.511.0",
     "next": "14.2.5",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
     "react": "18.3.1",
     "react-day-picker": "^8.10.1",
