--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
+    "web-push": "^3.6.7",
     "zod": "^3.25.28"
   },
   "devDependencies": {
