--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.77.0",
+    "@types/react-icons": "^2.2.7",
+    "@types/web-push": "^3.6.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
