--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,29 +3,47 @@
   "short_name": "Miabesite",
   "description": "Votre site web tout en main, en seulement 15 min, et 10 reponses, pour 0Fcfa",
   "start_url": "/",
+  "id": "/",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#2563eb",
+  "theme_color": "#000000",
   "icons": [
     {
-      "src": "https://supabase.miabesite.site/storage/v1/object/public/static-assets/icon-192x192.png",
+      "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://supabase.miabesite.site/storage/v1/object/public/static-assets/icon-256x256.png",
-      "sizes": "256x256",
-      "type": "image/png"
-    },
-    {
-      "src": "https://supabase.miabesite.site/storage/v1/object/public/static-assets/icon-384x384.png",
-      "sizes": "384x384",
-      "type": "image/png"
-    },
-    {
-      "src": "https://supabase.miabesite.site/storage/v1/object/public/static-assets/icon-512x512.png",
+      "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-maskable-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/icons/icon-maskable-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
+    }
+  ],
+  "screenshots": [
+    {
+      "src": "/screenshots/wide-screenshot.png",
+      "sizes": "1280x800",
+      "type": "image/png",
+      "form_factor": "wide",
+      "label": "Capture d'écran de l'application sur ordinateur"
+    },
+    {
+      "src": "/screenshots/mobile-screenshot.png",
+      "sizes": "750x1334",
+      "type": "image/png",
+      "label": "Capture d'écran de l'application sur mobile"
     }
   ]
 }
